1.07-Ingress/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-application-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-application
  template:
    metadata:
      labels:
        app: main-application
    spec:
      containers:
        - name: main-application
          image: mickeckemi21/main-application:1.07
