1.07-Ingress/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: main-application-svc
spec:
  type: ClusterIP
  selector:
    app: main-application
  ports:
    - port: 8989
      protocol: TCP
      targetPort: 8080
