1.07-Ingress/manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: main-application-svc
              servicePort: 8989
